2012-03-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/charset.c (bidi_line_wrap): Fix a spurious warning.

2012-03-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/i386/pc/startup_raw.S (multiboot_trampoline): Fix
	size calculation.
	* grub-core/kern/i386/realmode.S (realidt): Assume default BIOS IDT if
	none is known.

2012-03-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/net.c (grub_net_addr_to_str): Don't translate
	"temporary" since it's used in identifier and is limited in space.

2012-03-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* po/POTFILES.in: Regenerate. Include *.h since they contain
	translatable strings as well.

2012-03-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/mdraid1x_linux.c (grub_mdraid_detect): Add missing
	byte-swap on big-endian.
	Reported by: Lennart Sorensen

2012-03-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (prot_init_space): New variable.
	(allocate_pages): Improve dprintf.
	(grub_cmd_linux): Fill prot_init_space. Fix improper usage of
	code32_start. Fill code32_start and kernel_alignment in params.
	(grub_cmd_initrd): Use prot_init_space.

2012-03-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkstandalone.in: Propagate grub-mkimage.c change.

2012-03-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Add missing dot at the end of sentence.

2012-03-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/videoinfo.c: Add TRANSLATORS comments.
	* grub-core/commands/videotest.c: Likewise.
	* grub-core/loader/i386/linux.c: Likewise.

2012-03-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/acpi.c (options): Fix a dot in the middle of the
	sentence.
	Reported by: Milo Casagrande.

2012-03-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/acpi.c: Add TRANSLATORS comments.
	* grub-core/commands/gptsync.c: Likewise.